<resources>
    <string name="app_name">PhotoBooth</string>
    <string name="btn_cancel">Abbrechen</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_save">Speichern</string>
    <string name="btn_upload">Senden</string>
    <string name="btn_edit_email_address">Email ändern</string>
    <string name="btn_next">Weiter</string>
    <string name="btn_back">Zurück</string>
    <string name="replug_camera">Bitte schließen sie App und verbinden sie die Kamera erneut mit dem Tablet</string>
    <string name="replug_camera_title">PTP Modus Fehler!</string>
    <string name="image_preview_dialog_title">Bildvorschau</string>
    <string name="email_edit_remove_dialog_title">Email Adresse hinzufügen/löschen</string>
    <string name="email_edit_dialog_title">Email Adresse hinzufügen</string>
    <string name="uploading">Senden...\nDies kann unter Umständen etwas dauern...</string>
    <string name="add_email_hint">E-Mail Adresse eingeben</string>
    <string name="http_request_error_title">Beim Hochladen ist etwas schief gelaufen!</string>
    <string name="http_request_error">Beim Hochladen ist scheinbar etwas schief gelaufen!\n\r\n\rIst ein Internetverbindung vorhanden?</string>
    <string name="saved_image_internally_success">Das Bild wurde Lokal gespeichert und wird hochgeladen sobald eine WLAN Verbindung besteht</string>
    <string name="saved_image_internally_success_title">Glückwunsch!\nDas Bild wurde Lokal gespeichert!</string>
    <string name="saved_image_internally_error">Es besteht keine WLAN Verbindung und das Bild konnte nicht Lokal gespeichert werden</string>
    <string name="saved_image_internally_error_title">Ups! Das Bild konnte nicht\ngespeichert werden!</string>
    <string name="http_request_success">Bild erfolgreich hochgeladen</string>
    <string name="keep_email_addresses">Beenden und Email behalten</string>
    <string name="delete_email_addresses">Beenden und Email löschen</string>
    <string name="confirm_upload_title">Bild an folgende Email Adressen schicken?</string>
    <string name="keep_email_addresses_dialog_fragment_info">
        Sie können nun die Email Adressen behalten, um sie für das nächste Bild nicht noch einmal eingeben zu müssen.\r\n\r\nSie können die Email Adressen aber auch löschen.
    </string>
    <string name="email_info">
        Die angegebenen Email Adressen erlauben uns die gemachten Bilder nur denjenigen Personen
        zur Verfügung zu stellen, die auch wirklich auf dem Bild zu sehen sind, um die Privatsphäre
        jedes einzelnen zu wahren.
    </string>
    <string name="live_view_service_name">LiveViewService</string>
    <string name="unknown_error">Ein unbekannter Fehler ist aufgetreten!</string>
    <string name="error_dialog_title">Ups! Es ist ein Fehler aufgetreten</string>
    <string name="success_dialog_title">Aktion Erfolgreich abgeschlossen</string>
    <string name="get_picture_error">Aus einem unbekannten Grund kann das Bild nicht angezeigt werden</string>
    <string name="get_picture_error_title">Anzeigefehler</string>
    <string name="no_device_found">Bitte schließe eine Kamera via USB-OTG-Kabel an</string>
    <string name="no_device_found_title">Kein USB-Gerät gefunden</string>
    <string name="graduation_party">Absolventenfeier 2016</string>
    <string-array name="shutter_list">
        <item>SHUTTER_SPEED_BULB</item>
        <item>SHUTTER_SPEED_30_SEC</item>
        <item>SHUTTER_SPEED_25_SEC</item>
        <item>SHUTTER_SPEED_20_SEC</item>
        <item>SHUTTER_SPEED_15_SEC</item>
        <item>SHUTTER_SPEED_13_SEC</item>
        <item>SHUTTER_SPEED_10_SEC</item>
        <item>SHUTTER_SPEED_8_SEC</item>
        <item>SHUTTER_SPEED_6_SEC</item>
        <item>SHUTTER_SPEED_5_SEC</item>
        <item>SHUTTER_SPEED_4_SEC</item>
        <item>SHUTTER_SPEED_3_2_SEC</item>
        <item>SHUTTER_SPEED_2_5_SEC</item>
        <item>SHUTTER_SPEED_2_SEC</item>
        <item>SHUTTER_SPEED_1_6_SEC</item>
        <item>SHUTTER_SPEED_1_3_SEC</item>
        <item>SHUTTER_SPEED_1_SEC</item>
        <item>SHUTTER_SPEED_0_8_SEC</item>
        <item>SHUTTER_SPEED_0_6_SEC</item>
        <item>SHUTTER_SPEED_0_5_SEC</item>
        <item>SHUTTER_SPEED_0_4_SEC</item>
        <item>SHUTTER_SPEED_0_3_SEC</item>
        <item>SHUTTER_SPEED_1_4</item>
        <item>SHUTTER_SPEED_1_5</item>
        <item>SHUTTER_SPEED_1_6</item>
        <item>SHUTTER_SPEED_1_8</item>
        <item>SHUTTER_SPEED_1_10</item>
        <item>SHUTTER_SPEED_1_13</item>
        <item>SHUTTER_SPEED_1_15</item>
        <item>SHUTTER_SPEED_1_20</item>
        <item>SHUTTER_SPEED_1_25</item>
        <item>SHUTTER_SPEED_1_30</item>
        <item>SHUTTER_SPEED_1_40</item>
        <item>SHUTTER_SPEED_1_50</item>
        <item>SHUTTER_SPEED_1_60</item>
        <item>SHUTTER_SPEED_1_80</item>
        <item>SHUTTER_SPEED_1_100</item>
        <item>SHUTTER_SPEED_1_125</item>
        <item>SHUTTER_SPEED_1_160</item>
        <item>SHUTTER_SPEED_1_200</item>
        <item>SHUTTER_SPEED_1_250</item>
        <item>SHUTTER_SPEED_1_320</item>
        <item>SHUTTER_SPEED_1_400</item>
        <item>SHUTTER_SPEED_1_500</item>
        <item>SHUTTER_SPEED_1_640</item>
        <item>SHUTTER_SPEED_1_800</item>
        <item>SHUTTER_SPEED_1_1000</item>
        <item>SHUTTER_SPEED_1_1250</item>
        <item>SHUTTER_SPEED_1_1600</item>
        <item>SHUTTER_SPEED_1_2000</item>
        <item>SHUTTER_SPEED_1_2500</item>
        <item>SHUTTER_SPEED_1_3200</item>
        <item>SHUTTER_SPEED_1_4000</item>
        <item>SHUTTER_SPEED_1_5000</item>
        <item>SHUTTER_SPEED_1_6400</item>
        <item>SHUTTER_SPEED_1_8000</item>
    </string-array>
    <string-array name="nikon_shutter_list">
        <item>NK_ShutterSpeed_4000</item>
        <item>NK_ShutterSpeed_3200</item>
        <item>NK_ShutterSpeed_2500</item>
        <item>NK_ShutterSpeed_2000</item>
        <item>NK_ShutterSpeed_1600</item>
        <item>NK_ShutterSpeed_1250</item>
        <item>NK_ShutterSpeed_1000</item>
        <item>NK_ShutterSpeed_800</item>
        <item>NK_ShutterSpeed_640</item>
        <item>NK_ShutterSpeed_500</item>
        <item>NK_ShutterSpeed_400</item>
        <item>NK_ShutterSpeed_320</item>
        <item>NK_ShutterSpeed_250</item>
        <item>NK_ShutterSpeed_200</item>
        <item>NK_ShutterSpeed_160</item>
        <item>NK_ShutterSpeed_125</item>
        <item>NK_ShutterSpeed_100</item>
        <item>NK_ShutterSpeed_80</item>
        <item>NK_ShutterSpeed_60</item>
        <item>NK_ShutterSpeed_50</item>
        <item>NK_ShutterSpeed_40</item>
        <item>NK_ShutterSpeed_30</item>
        <item>NK_ShutterSpeed_25</item>
        <item>NK_ShutterSpeed_20</item>
        <item>NK_ShutterSpeed_15</item>
        <item>NK_ShutterSpeed_13</item>
        <item>NK_ShutterSpeed_10</item>
        <item>NK_ShutterSpeed_8</item>
        <item>NK_ShutterSpeed_6</item>
        <item>NK_ShutterSpeed_5</item>
        <item>NK_ShutterSpeed_4</item>
        <item>NK_ShutterSpeed_3</item>
        <item>NK_ShutterSpeed_2_5</item>
        <item>NK_ShutterSpeed_2</item>
        <item>NK_ShutterSpeed_1_6</item>
        <item>NK_ShutterSpeed_1_3</item>
        <item>NK_ShutterSpeed_1_sec</item>
        <item>NK_ShutterSpeed_1_3_sec</item>
        <item>NK_ShutterSpeed_1_6_sec</item>
        <item>NK_ShutterSpeed_2_sec</item>
        <item>NK_ShutterSpeed_2_5_sec</item>
        <item>NK_ShutterSpeed_3_sec</item>
        <item>NK_ShutterSpeed_4_sec</item>
        <item>NK_ShutterSpeed_5_sec</item>
        <item>NK_ShutterSpeed_6_sec</item>
        <item>NK_ShutterSpeed_8_sec</item>
        <item>NK_ShutterSpeed_10_sec</item>
        <item>NK_ShutterSpeed_13_sec</item>
        <item>NK_ShutterSpeed_15_sec</item>
        <item>NK_ShutterSpeed_20_sec</item>
        <item>NK_ShutterSpeed_25_sec</item>
        <item>NK_ShutterSpeed_30_sec</item>
        <item>NK_ShutterSpeed_Bulb</item>
    </string-array>
    <string-array name="iso_list">
        <item>ISO_Auto</item>
        <item>ISO_50</item>
        <item>ISO_100</item>
        <item>ISO_125</item>
        <item>ISO_160</item>
        <item>ISO_200</item>
        <item>ISO_250</item>
        <item>ISO_320</item>
        <item>ISO_400</item>
        <item>ISO_500</item>
        <item>ISO_640</item>
        <item>ISO_800</item>
        <item>ISO_1000</item>
        <item>ISO_1250</item>
        <item>ISO_1600</item>
        <item>ISO_3200</item>
    </string-array>
    <string-array name="nikon_iso_list">
        <item>NK_ISO_100</item>
        <item>NK_ISO_125</item>
        <item>NK_ISO_160</item>
        <item>NK_ISO_200</item>
        <item>NK_ISO_250</item>
        <item>NK_ISO_320</item>
        <item>NK_ISO_400</item>
        <item>NK_ISO_500</item>
        <item>NK_ISO_640</item>
        <item>NK_ISO_800</item>
        <item>NK_ISO_1000</item>
        <item>NK_ISO_1250</item>
        <item>NK_ISO_1600</item>
        <item>NK_ISO_2000</item>
        <item>NK_ISO_2500</item>
        <item>NK_ISO_3200</item>
        <item>NK_ISO_4000</item>
        <item>NK_ISO_5000</item>
        <item>NK_ISO_6400</item>
        <item>NK_ISO_Hi03</item>
        <item>NK_ISO_Hi07</item>
        <item>NK_ISO_Hi_1</item>
        <item>NK_ISO_Hi_2</item>
    </string-array>
    <string-array name="aperture_list">
        <item>APERTURE_F1_2</item>
        <item>APERTURE_F1_4</item>
        <item>APERTURE_F1_6</item>
        <item>APERTURE_F1_8</item>
        <item>APERTURE_F2_0</item>
        <item>APERTURE_F2_2</item>
        <item>APERTURE_F2_5</item>
        <item>APERTURE_F2_8</item>
        <item>APERTURE_F3_2</item>
        <item>APERTURE_F3_5</item>
        <item>APERTURE_F4_0</item>
        <item>APERTURE_F4_5</item>
        <item>APERTURE_F5_0</item>
        <item>APERTURE_F5_6</item>
        <item>APERTURE_F6_3</item>
        <item>APERTURE_F7_1</item>
        <item>APERTURE_F8</item>
        <item>APERTURE_F9</item>
        <item>APERTURE_F10</item>
        <item>APERTURE_F11</item>
        <item>APERTURE_F13</item>
        <item>APERTURE_F14</item>
        <item>APERTURE_F16</item>
        <item>APERTURE_F18</item>
        <item>APERTURE_F20</item>
        <item>APERTURE_F22</item>
        <item>APERTURE_F25</item>
        <item>APERTURE_F29</item>
        <item>APERTURE_F32</item>
    </string-array>
    <string-array name="nikon_aperture_list">
        <item>NK_Aperture_3_50</item>
        <item>NK_Aperture_4_00</item>
        <item>NK_Aperture_4_50</item>
        <item>NK_Aperture_4_80</item>
        <item>NK_Aperture_5</item>
        <item>NK_Aperture_5_60</item>
        <item>NK_Aperture_6_30</item>
        <item>NK_Aperture_7_10</item>
        <item>NK_Aperture_8</item>
        <item>NK_Aperture_9</item>
        <item>NK_Aperture_10</item>
        <item>NK_Aperture_11</item>
        <item>NK_Aperture_13</item>
        <item>NK_Aperture_14</item>
        <item>NK_Aperture_16</item>
        <item>NK_Aperture_18</item>
        <item>NK_Aperture_20</item>
        <item>NK_Aperture_22</item>
        <item>NK_Aperture_25</item>
        <item>NK_Aperture_29</item>
        <item>NK_Aperture_32</item>
        <item>NK_Aperture_36</item>
    </string-array>
    <string-array name="picturestyle_list">
        <item>PictureStyle_Standard</item>
        <item>PictureStyle_Portrait</item>
        <item>PictureStyle_Landscape</item>
        <item>PictureStyle_Neutral</item>
        <item>PictureStyle_Faithful</item>
        <item>PictureStyle_Monochrome</item>
        <item>PictureStyle_User1</item>
        <item>PictureStyle_User2</item>
        <item>PictureStyle_User3</item>
    </string-array>
    <string-array name="whitebalance_list">
        <item>AutoWhiteBalance</item>
        <item>Daylight</item>
        <item>Clouds</item>
        <item>Tungsteen</item>
        <item>Fluoriscent</item>
        <item>Strobe</item>
        <item>WhitePaper</item>
        <item>Shade</item>
    </string-array>
</resources>