<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_email_addresses_dialog_fragment_info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_keep_email_addresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_email_addresses" />

        <Button
            android:id="@+id/btn_delete_email_addresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_email_addresses" />
    </LinearLayout>
</LinearLayout>